# 3D-engine

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeSettings.json  README.md  ahh  ahh.pub  imgui.ini  main.cpp
.cache/clangd/index/: _fixes.hpp.3102D0D9BF2CB379.idx  _vectorize.hpp.AECFD1A8B28DE299.idx  b2_api.h.A8D9DA6F545FD7EB.idx  b2_block_allocator.h.91017847769BA88A.idx  b2_body.h.0938E123F661F592.idx  b2_broad_phase.h.737A96EA11E1CA4A.idx  b2_collision.h.48972C206EC47D12.idx  b2_common.h.A2E3E22FD756F3C9.idx  b2_contact_manager.h.439AAB2E84358364.idx  b2_dynamic_tree.h.B64958F8C5E28A12.idx  b2_fixture.h.C0D9C3BE9C098AAA.idx  b2_growable_stack.h.6E15AC4B00AF3A74.idx  b2_math.h.523BED448A8C72F1.idx  b2_polygon_shape.h.58E78D93CA84AE5F.idx  b2_settings.h.49E8CBBD1B56F6F3.idx  b2_shape.h.38901E2A60147D90.idx  b2_stack_allocator.h.DE6C0FC360C5DE40.idx  b2_time_step.h.F7009A456A62F2D3.idx  b2_types.h.3D46380E3066E6DD.idx  b2_world.h.74815517406006AE.idx  b2_world_callbacks.h.93D03AA588F1FD70.idx  buffer.hpp.B9167D805BDBBF34.idx  camera.cpp.5AEAB52F8FF65BAF.idx  camera.hpp.6FEC8C1667E23AB6.idx  common.hpp.FF235D73AD26773D.idx  compute_common.hpp.76FDFB87074D4CF0.idx  compute_vector_relational.hpp.9117275362A9F2DA.idx  exponential.hpp.8AAB32AD6B259B03.idx  fileutils.hpp.6685D16ED0B0DBC3.idx  func_common.inl.70C1C6173E434472.idx  func_exponential.inl.5A700D40535F6C77.idx  func_geometric.inl.7624212A52D9E54A.idx  func_integer.inl.3744B0777A82FA94.idx  func_matrix.inl.B43B9AD8171C61FA.idx  func_packing.inl.F4B2B819888D3FC5.idx  func_trigonometric.inl.A7AF65D358CF347C.idx  func_vector_relational.inl.02317390F6F42465.idx  fwd.hpp.34519304A83048ED.idx  geometric.hpp.CEBFA1DE24883690.idx  glew.h.CF26BD6B586C7265.idx  (+143 more)
Debug/: makefile  objects.mk  subdir.mk
ahh/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
ext Resources/includes/SOIL2/: SOIL2.c
ext Resources/includes/glm/: .cproject  .project
ext Resources/libraries/: soil2-debug.idb  soil2-debug.lib  soil2.lib
ext_resources/includes/SOIL2/: SOIL2.c
ext_resources/includes/glm/: .cproject
include/GL/: glew.h
include/imgui/: imgui_impl_glfw.cpp
lib/: libGLEW.so.2.2.0
resources/Shaders/: FragShader  TextureFragShader  TextureVertShader  VertShader  shader.vert
src/: main.cpp
src/Buffers/: buffer.cpp  buffer.hpp  indexbuffer.cpp  indexbuffer.hpp  vertexarray.cpp  vertexarray.h  vertexarray.hpp
src/Graphics/: 2drenderer.hpp  batchrender2d.hpp  render.hpp  renderer.hpp  shader.cpp  shader.h  shader.hpp  simple2drenderer.hpp  texture.hpp  view_matrices.cpp  view_matrices.h  window.cpp  window.h  window.hpp
src/Maths/: maths.h  vec2.h
src/Shaders/: shader.frag  shader.vert
src/Utils/: camera.cpp  camera.hpp  fileutils.h
